[gd_scene load_steps=14 format=3 uid="uid://bhucoim8sfub4"]

[ext_resource type="Script" path="res://scripts/enemies/rapid_fire_enemy.gd" id="1_mm2bv"]
[ext_resource type="Texture2D" uid="uid://dh6ydk4dc5py4" path="res://graphics/rapid_fire_enemy.png" id="2_v0mgk"]
[ext_resource type="Texture2D" uid="uid://do0qvfcuj2ncg" path="res://graphics/rapid_fire_enemy_chasis.png" id="3_pxrmb"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="4_52yg1"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="5_vhcj7"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="6_jh32t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_44ta5"]
atlas = ExtResource("2_v0mgk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu230"]
atlas = ExtResource("2_v0mgk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr4sn"]
atlas = ExtResource("2_v0mgk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pijr0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ta5")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu230")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr4sn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(16, 16)

[node name="RapidFireEnemy" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_mm2bv")
base_fire_interval = 0.2
fire_interval_per_level = 0.025
min_fire_interval = 0.075
base_hp = 2
max_hp = 8
base_speed = 80
max_speed = 192
speed_per_level = 8
power_per_level = 0.2
max_power = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48w8c")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
path_max_distance = 10.0
avoidance_enabled = true
radius = 12.0
neighbor_distance = 72.0
max_speed = 128.0

[node name="Body" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pijr0")
animation = &"walk"
autoplay = "default"

[node name="Chasis" type="Sprite2D" parent="Body"]
texture = ExtResource("3_pxrmb")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_52yg1")]
visible = false
collision_layer = 32
collision_mask = 512
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("5_vhcj7")]
visible = false
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("6_jh32t")
metadata/_edit_use_anchors_ = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
